Install grunt-cli on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,7 @@ env:
   matrix:
       - TEST_CMD="mocha"
       - TEST_CMD="lint"
+before_script:
+  - npm install -g grunt-cli
 script:
   - grunt travis
