--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "./node_modules/.bin/grunt",
     "cover": "./node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -- -u exports -R spec test/providers/*.js",
     "coveralls": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- -- -u exports --report lcovonly -- -R spec -- test/providers/*.js && cat ./coverage/lcov.info | ./node_modules/.bin/coveralls && rm -rf ./coverage"
- },
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/webcast-io/iostreams.git"
@@ -33,7 +33,8 @@
   "dependencies": {
     "knox": "~0.8.8",
     "async": "~0.2.9",
-    "underscore": "~1.5.2"
+    "underscore": "~1.5.2",
+    "mkdirp": "~0.3.5"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
