--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "knox": "~0.8.8",
     "async": "~0.2.9",
     "underscore": "~1.5.2",
-    "mkdirp": "~0.3.5"
+    "mkdirp": "~0.3.5",
+    "grunt-cli": "~0.1.13"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
